# tui-code-projects

./: Cargo.toml  Makefile  toodo.md
scripts/: install.ps1  install.sh
src/: app.rs  events.rs  main.rs
src/config/: mod.rs  state.rs
src/events/: category.rs  config.rs  confirm.rs  dispatcher.rs  done.rs  language.rs  list_nav.rs  mod.rs  nav_action.rs  options.rs  preset.rs  quit_confirm.rs  running.rs
src/presets/: languages.rs  mod.rs  ui.rs
src/presets/languages/: flutter.rs  get_languages.rs  go.rs  go_desktop.rs  java.rs  kotlin_mobile.rs  mod.rs  php.rs  python.rs  python_desktop.rs  rust.rs  rust_desktop.rs  shared.rs  swift.rs  swift_mobile.rs  types.rs  typescript_backend.rs  typescript_desktop.rs  typescript_frontend.rs
src/presets/ui/: category.rs  config.rs  confirm.rs  done.rs  draw.rs  language.rs  mod.rs  options.rs  quit_confirm.rs  running.rs  shared.rs
src/scaffold/: command.rs  flutter.rs  go.rs  go_desktop.rs  java.rs  kotlin_mobile.rs  mod.rs  params.rs  php.rs  python.rs  python_desktop.rs  run.rs  rust.rs  rust_desktop.rs  swift_desktop.rs  swift_mobile.rs  typescript_backend.rs  typescript_desktop.rs  typescript_frontend.rs  writer.rs  writer_constants.rs
src/style/: theme.rs
src/tests/: app_tests.rs  config_tests.rs  confirm_tests.rs  done_tests.rs  events_tests.rs  flutter_tests.rs  git_tests.rs  languages_tests.rs  mod.rs  scaffold_tests.rs  theme_tests.rs  writer_tests.rs
